unpublish and publish endpoint on public API, delete endpoint unpublishes and deletes app
